--- a/requirements.txt
+++ b/requirements.txt
@@ -2,55 +2,153 @@ aiogram==2.24
 aiohttp==3.8.3
 aiosignal==1.3.1
 altgraph==0.17.3
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
 async-generator==1.10
 async-timeout==4.0.2
 attrs==22.2.0
 auto-py-to-exe==2.27.0
+autobahn==23.1.1
+Automat==22.10.0
 Babel==2.9.1
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.5
 bottle==0.12.23
 bottle-websocket==0.2.9
+Brotli==1.0.9
+bs4==0.0.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
+comm==0.1.2
+constantly==15.1.0
 contourpy==1.0.7
+cryptography==39.0.0
 cycler==0.11.0
+debugpy==1.6.5
+decorator==5.1.1
+defusedxml==0.7.1
 Eel==0.14.0
+entrypoints==0.4
 exceptiongroup==1.1.0
+executing==1.2.0
+fastjsonschema==2.16.2
 fonttools==4.38.0
+fqdn==1.5.1
 frozenlist==1.3.3
 future==0.18.3
 gevent==22.10.2
 gevent-websocket==0.10.1
 greenlet==2.0.1
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
+ipykernel==6.20.2
+ipython==8.8.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-events==0.6.3
+jupyter_client==7.4.9
+jupyter_core==5.1.3
+jupyter_server==2.1.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+kaitaistruct==0.10
 kiwisolver==1.4.4
+lxml==4.9.2
 magic-filter==1.0.9
+MarkupSafe==2.1.2
 matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mistune==2.0.4
 multidict==6.0.4
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.8
+nbformat==5.7.3
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
 numpy==1.24.1
 outcome==1.2.0
 packaging==23.0
-pefile==2022.5.30
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
+platformdirs==2.6.2
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
+Pygments==2.14.0
 pyinstaller==5.7.0
 pyinstaller-hooks-contrib==2022.15
+pyOpenSSL==23.0.0
 pyparsing==3.0.9
+pyrsistent==0.19.3
 PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==0.21.1
+python-dotenv==0.21.0
+python-json-logger==2.0.4
 pytz==2022.7.1
-pywin32-ctypes==0.2.0
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.0
+QtPy==2.3.0
+requests==2.28.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 selenium==4.7.2
+selenium-wire==5.1.0
+Send2Trash==1.8.0
+service-identity==21.1.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+stack-data==0.6.2
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.8.1
 trio==0.22.0
 trio-websocket==0.9.2
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.4.0
+uri-template==1.2.0
 urllib3==1.26.14
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
 whichcraft==0.6.1
+widgetsnbextension==4.0.5
 wsproto==1.2.0
 yarl==1.8.2
 zope.event==4.6
 zope.interface==5.5.2
+zstandard==0.19.0
